syntax = "proto3";
package v1;

message User {
    // Unique integer assigned to each user
    int64 id = 1;

    // Unique string for each user
    string username = 2;

    // Email address
    string email = 3;

    // First name
    string firstName = 4;

    // Last Name
    string lastName = 5;
}

message Group {
    // Unique integer assigned to each group
    int64 id = 1;

    // The name of the group
    string name = 2;
}

message Membership {
    // Unique integer assigned to each membership
    int64 id = 1;

    // ID of user
    int64 uid = 2;

    // ID of group
    int64 gid = 3;
}

// Request data to update a user
message UpdateUserRequest {
    // API versioning
    string api = 1;

    // User entity to add
    User user = 2;

    // Google id token
    string id_token = 3;
}

// Response that contains data for updated user
message UpdateUserResponse {
    // API versioning
    string api = 1;

    // ID of updated user
    int64 id = 2;
}

// Request data to create new user
message GetUserByIdRequest {
    // API versioning
    string api = 1;

    // Id of requested user
    int64 id = 2;

    // Google id token
    string id_token = 3;
}

// Response that contains data for created user
message GetUserByIdResponse {
    // API versioning
    string api = 1;

    // Requested user
    User user = 2;
}

// Service to manage list of users and groups
service UsermanService {
    // Update (or create) a user
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);

    // Get a user by id
    rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}
